[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network_Setup.gd" type="Script" id=1]

[node name="Network_Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_Configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = -202.0
margin_right = 267.5
margin_bottom = -26.0
text = "Create Server"

[node name="Join_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = 23.5
margin_right = 267.5
margin_bottom = 199.5
text = "Join Server"

[node name="Enter_Ip_Address" type="LineEdit" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 26.0
align = 1
max_length = 100
clear_button_enabled = true
placeholder_text = "Enter IP Address"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_Ip_Address" type="Label" parent="CanvasLayer"]
anchor_top = 0.893
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.4401
align = 1
valign = 1

[connection signal="pressed" from="Multiplayer_Configure/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="Multiplayer_Configure/Join_Server" to="." method="_on_Join_Server_pressed"]
